# RLPuyo

./: CMakeLists.txt  trainer.py
1stResults/: 28-04-2024-16-08.csv  trainer.py
2ndResults/: 29-04-2024-04-09.csv  trainer.py
DoubleQLearning1000Episodes/: 05-05-2024-08-16.csv
src/: Main.cpp
src/Game/: Action.cpp  Action.hpp  Board.cpp  Board.frag  Board.hpp  Board.vert  Environment.cpp  Environment.hpp  Renderer.cpp  Renderer.hpp
